added testing file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title></title>
 </head>
 <body>
-	<nav class='top-nav non-active'>
+	<nav class='top-nav active'>
 		My Albums
 	</nav>
 	<section class="side-nav non-active">
@@ -19,7 +19,8 @@
 		<div class="side-nav-button">Album 6</div>
 		
 	</section>
-	<section class="display-container non-active">
+<!-- here goes album's  preview -->
+	<section class="display-container active">
 		<div class="item-display">
 			<img class="item-display-image" src="images/album001/1.jpeg">
 			<div class="item-display-text">Album 1</div>
@@ -45,7 +46,9 @@
 			<div class="item-display-text">Album 6</div>
 		</div>
 	</section>
-	<section class="image-display">
+
+<!-- here goes my image full display	 -->
+	<section class="image-display non-active">
 		<div class="image-display-top">
 			<div class="image-display-back">
 				Back to Album 1
