let's work on the back button

--- a/index.html
+++ b/index.html
@@ -11,42 +11,208 @@
 		My Albums
 	</nav>
 	<section class="side-nav non-active">
-		<div class="side-nav-button">Album 1</div>
-		<div class="side-nav-button">Album 2</div>
-		<div class="side-nav-button">Album 3</div>
-		<div class="side-nav-button">Album 4</div>
-		<div class="side-nav-button">Album 5</div>
-		<div class="side-nav-button">Album 6</div>
+		<div class="side-nav-button btn1">Album 1</div>
+		<div class="side-nav-button btn2">Album 2</div>
+		<div class="side-nav-button btn3">Album 3</div>
+		<div class="side-nav-button btn4">Album 4</div>
+		<div class="side-nav-button btn5">Album 5</div>
+		<div class="side-nav-button btn6">Album 6</div>
 		
 	</section>
 <!-- here goes album's  preview -->
-	<section class="display-container active">
-		<div class="item-display">
+	<section class="display-container albums-all active">
+		<div class="item-display album-one-index">
 			<img class="item-display-image" src="images/album001/1.jpeg">
 			<div class="item-display-text">Album 1</div>
 		</div>
-		<div class="item-display">
-			<img class="item-display-image" src="images/album002/7.jpeg">
+		<div class="item-display album-two-index">
+			<img class="item-display-image album-two-index" src="images/album002/7.jpeg">
 			<div class="item-display-text">Album 2</div>
 		</div>
-		<div class="item-display">
+		<div class="item-display album-three-index">
 			<img class="item-display-image" src="images/album003/13.jpeg">
 			<div class="item-display-text">Album 3</div>
 		</div>
-		<div class="item-display">
+		<div class="item-display album-four-index">
 			<img class="item-display-image" src="images/album004/19.jpeg">
 			<div class="item-display-text">Album 4</div>
 		</div>
-		<div class="item-display">
+		<div class="item-display album-five-index">
 			<img class="item-display-image" src="images/album005/25.jpeg">
 			<div class="item-display-text">Album 5</div>
 		</div>
 		<div class="item-display">
-			<img class="item-display-image" src="images/album006/31.jpeg">
+			<img class="item-display-image album-six-index" src="images/album006/31.jpeg">
 			<div class="item-display-text">Album 6</div>
 		</div>
 	</section>
+<!-- first album goes here -->
+	<section class="display-container album-one non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/1.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/2.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/3.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/4.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/5.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album001/6.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
 
+<!-- second album goes here -->
+	<section class="display-container album-two non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/7.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/8.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/9.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/10.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/11.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album002/12.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
+
+<!-- Third album goes here -->
+	<section class="display-container album-three non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/13.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/14.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/15.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/16.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/17.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album003/18.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
+
+<!-- fourth album goes here -->
+	<section class="display-container album-four non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/19.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/20.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/21.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/22.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/23.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album004/24.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
+
+<!-- fifth album goes here -->
+	<section class="display-container album-five non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/25.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/26.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/27.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/28.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/29.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album005/30.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
+
+<!-- sixth album goes here -->
+	<section class="display-container album-six non-active">
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/31.jpeg">
+			<div class="item-display-text">Photo 1</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/32.jpeg">
+			<div class="item-display-text">Photo 2</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/33.jpeg">
+			<div class="item-display-text">Photo 3</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/34.jpeg">
+			<div class="item-display-text">Photo 4</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/35.jpeg">
+			<div class="item-display-text">Photo 5</div>
+		</div>
+		<div class="item-display">
+			<img class="item-display-image" src="images/album006/36.jpeg">
+			<div class="item-display-text">Photo 6</div>
+		</div>
+	</section>
 <!-- here goes my image full display	 -->
 	<section class="image-display non-active">
 		<div class="image-display-top">
